# fpv-smart-gate

./: .clang-format  .gitignore  CMakeLists.txt  README.md  nrf21540dk_nrf52840.overlay  nrf52-bindings.h  nrf52840_smart_gate.overlay  nrf52840dongle_nrf52840.overlay  prj-mesh.conf
boards/arm/nrf52840_smart_gate/: Kconfig  Kconfig.board  Kconfig.defconfig  nrf52840_smart_gate.dts  nrf52840_smart_gate.yaml  nrf52840_smart_gate_defconfig
src/: bluetooth.c  bluetooth.h  bluetooth_mesh.c  bluetooth_mesh.h  board.h  common.h  led.c  led.h  main.c  west.yml  ws2812.c  ws2812.h
